--- a/processapplication/pom.xml
+++ b/processapplication/pom.xml
@@ -104,6 +104,11 @@
       <artifactId>camunda-engine-plugin-spin</artifactId>
       <version>${camunda-bpm-spring-boot-starter.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
   </dependencies>
 
   <!-- Konfiguration des Build-Prozesses -->
