--- a/processapplication/src/main/resources/application.properties
+++ b/processapplication/src/main/resources/application.properties
@@ -52,3 +52,13 @@ spring.banner.location=classpath:banner.txt
 
 # Standard-Serialisierungs-Format auf JSON setzen (statt dem Standard x-java-serialized-object)
 camunda.bpm.default-serialization-format=application/json
+
+# Stellt sicher, dass auch für unsere Nicht-In-Memory-Datenbank automatisch ein Schema generiert wird 
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+
+# Stellt sicher, dass nicht versucht wird, data.sql auszuführen, bevor die Schema-Generierung abgeschlossen ist
+spring.jpa.defer-datasource-initialization=true
+
+# Stellt sicher, dass beim zweiten, dritten, usw. Start des Servers aufgrund wiederkehrender INSERT-Befehle nicht der Server stoppt
+spring.sql.init.continue-on-error=true
